--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -8,12 +8,12 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/hub-style.css') }}?v={{ config.VERSION }}">
 <style>
     body {
-        background-image: url('{{ versioned_static("images/hinh-nen.webp") }}') !important;
+        background-image: url('{{ versioned_static("images/hinh-nen.png") }}') !important;
     }
 
     @supports (-webkit-touch-callout: none) {
         body::before {
-            background-image: url('{{ versioned_static("images/hinh-nen.webp") }}') !important;
+            background-image: url('{{ versioned_static("images/hinh-nen.png") }}') !important;
         }
     }
 </style>
