--- a/app/templates/unrated_tasks.html
+++ b/app/templates/unrated_tasks.html
@@ -258,7 +258,7 @@
                             {{ task.creator.full_name }}
                         </td>
 
-                        <td data-label="Ngày Hoàn Thành">
+                        <td data-label="Hoàn Thành">
                             <span class="badge bg-success">
                                 {{ task.updated_at | vn_datetime('%H:%M') }} {{ task.updated_at | vn_datetime('%d/%m/%Y') }}
                             </span>
