--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,7 @@
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#0d6efd">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="BRICON Workflow">
     <meta name="mobile-web-app-capable" content="yes">
 
